# lanyard-rs

./: Cargo.toml  Dockerfile  LICENSE  README.md  Rocket.toml
src/: main.rs
