[package]
name = "lanyard-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serenity = {version ="0.12", features = ["unstable_discord_api"] }
tokio = { version = "1.21.2", features = ["macros", "rt-multi-thread"] }
rocket = "0.5.0"
serde_json = "1.0.113"
redis = { version = "0.24.0", features = ["tokio-comp"] }